; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_divu_16_ix.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_divu_16_ix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@CFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@VFLAG_SET = common dso_local global i32 0, align 4
@EXCEPTION_ZERO_DIVIDE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_divu_16_ix() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* @DX, i32** %1, align 8
  %5 = call i32 (...) @OPER_AY_IX_16()
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %34

8:                                                ; preds = %0
  %9 = load i32*, i32** %1, align 8
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %2, align 4
  %12 = sdiv i32 %10, %11
  store i32 %12, i32* %3, align 4
  %13 = load i32*, i32** %1, align 8
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %2, align 4
  %16 = srem i32 %14, %15
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp slt i32 %17, 65536
  br i1 %18, label %19, label %32

19:                                               ; preds = %8
  %20 = load i32, i32* %3, align 4
  store i32 %20, i32* @FLAG_Z, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @NFLAG_16(i32 %21)
  store i32 %22, i32* @FLAG_N, align 4
  %23 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %23, i32* @FLAG_V, align 4
  %24 = load i32, i32* @CFLAG_CLEAR, align 4
  store i32 %24, i32* @FLAG_C, align 4
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @MASK_OUT_ABOVE_16(i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = shl i32 %27, 16
  %29 = or i32 %26, %28
  %30 = call i32 @MASK_OUT_ABOVE_32(i32 %29)
  %31 = load i32*, i32** %1, align 8
  store i32 %30, i32* %31, align 4
  br label %37

32:                                               ; preds = %8
  %33 = load i32, i32* @VFLAG_SET, align 4
  store i32 %33, i32* @FLAG_V, align 4
  br label %37

34:                                               ; preds = %0
  %35 = load i32, i32* @EXCEPTION_ZERO_DIVIDE, align 4
  %36 = call i32 @m68ki_exception_trap(i32 %35)
  br label %37

37:                                               ; preds = %34, %32, %19
  ret void
}

declare dso_local i32 @OPER_AY_IX_16(...) #1

declare dso_local i32 @NFLAG_16(i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_32(i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @m68ki_exception_trap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
